# cutting_videos

./: .gitignore  README.md  pyproject.toml
video_cutting_demo/: frame_analyzer.py  main.py  object_detector.py  video_processor.py
